# RNMR

./: .gitignore  LICENSE  LICENSE_FFMPEG.txt  README.md  app.spec  pyproject.toml  requirements.txt  run_gui.bat  settings.json
docs/: support.html
gui/: __init__.py  failed_lookup_dialog.py  i18n.py  id_dialog.py  main.py  main_window.py  media_type_dialog.py  search_dialog.py  settings.py  settings_dialog.py  setup_wizard.py  support_dialog.py  theme.py  tmdb_select_dialog.py  worker.py
renamer/: __init__.py  __main__.py  cache.py  cleaner.py  detection.py  formatter.py  history.py  id_mapping.py  metadata_extractor.py  models.py  parser.py  renamer.py  runtime.py  tmdb.py
resources/i18n/: rnmr_es.qm  rnmr_es.ts
scripts/: build_i18n.ps1  update_i18n.ps1
